[package]
name = "bevy_openxr"
version = "0.0.2"
edition = "2018"
description = "(Unofficial) OpenXR integration WIP for Bevy engine"
repository = "https://github.com/blaind/bevy_openxr"
keywords = ["bevy"]
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["render", "bevy_wgpu", "x11"] }
openxr = { version = "0.13.1", features = ["loaded"], default-features = false }
bevy_openxr_core = { path = "../bevy_openxr_core" }
wgpu = { version = "0.8.0" }

num-traits = "0.2"
num-derive = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.2", features = ["logger"]}
ndk = { version = "0.2.1", features = ["trace"] }
jni = "0.18.0"
