[package]
name = "bevy_openxr_core"
version = "0.0.2"
edition = "2018"
description = "(Unofficial) OpenXR integration WIP for Bevy engine"
repository = "https://github.com/blaind/bevy_openxr"
keywords = ["bevy"]
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.5.0", default-features = false }
openxr = { version = "0.13.1", features = ["loaded"], default-features = false }
wgpu = { version = "0.8.0", features = ["use-openxr"] }
gfx-hal = { version = "0.8.0" }

# TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
once_cell = "1.4.1"
ash = "0.31" # FIXME remove

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.2", features = ["logger"]}
ndk = "0.2"

